# bolotype

./: .gitignore  LICENSE  README.md  install_ubuntu.sh  moonshine-voice-typing.service  packaging_guide.md  pyproject.toml  requirements.txt  run_daemon.sh  sample.env  voice-clear-buffer.sh  voice-commit.sh  voice-polish.sh  voice-toggle.sh  voice-undo.sh
src/bolotype/: cli.py  config.py  control.py  daemon.py  editor.py  installer.py  llm.py
src/bolotype/accessibility/: linux_atspi.py
src/bolotype/asr/: base.py  moonshine_asr.py  nemotron_asr.py
src/bolotype/input/: linux.py
src/bolotype/resources/: default_settings.json  default_system_prompt.txt
voice_typing/: cli.py  daemon.py  editor.py  llm.py
