[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "bolotype"
version = "0.1.0"
description = "System-wide local voice typing with AI-powered editing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
    { name = "Muhammad Abdullah Baig" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "moonshine-voice",
    "openai>=1.0",
    "platformdirs>=4.0",
]


[project.optional-dependencies]
nemotron = [
    "transformers>=4.47",
    "torch>=2.0",
    "sounddevice>=0.4",
    "librosa",
    "Pillow>=9.1",
]
dev = [
    "build",
    "twine",
    "pytest",
    "ruff",
]


[project.scripts]
bolotype = "bolotype.cli:main"


[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
bolotype = [
    "resources/*.json",
    "resources/*.txt",
]
