[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "bolotype"
version = "0.1.1"
description = "System-wide local voice typing with AI-powered editing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
    { name = "Muhammad Abdullah Baig" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# Only dependencies required for the CLI and shared functionality.
dependencies = [
    "openai>=1.0",
    "platformdirs>=4.0",
]


[project.urls]
Homepage = "https://github.com/baig97/bolotype"
Repository = "https://github.com/baig97/bolotype"
Issues = "https://github.com/baig97/bolotype/issues"


[project.optional-dependencies]
moonshine = [
    "moonshine-voice",
]

nemotron = [
    "transformers>=4.47",
    "torch>=2.0",
    "accelerate>=1.14",
    "sounddevice>=0.4",
    "librosa",
    "Pillow>=9.1",
    "numpy>=1.26,<2",
    "scipy>=1.11,<1.16",
    "scikit-learn>=1.4",
]

all = [
    "moonshine-voice",
    "transformers>=4.47",
    "torch>=2.0",
    "accelerate>=1.14",
    "sounddevice>=0.4",
    "librosa",
    "Pillow>=9.1",
    "numpy>=1.26,<2",
    "scipy>=1.11,<1.16",
    "scikit-learn>=1.4",
]

dev = [
    "build",
    "twine",
    "pytest",
    "ruff",
]


[project.scripts]
bolotype = "bolotype.cli:main"


[tool.setuptools]
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
bolotype = [
    "resources/*.json",
    "resources/*.txt",
]
